codex-rs/tui/src/app/snapshots/codex_tui__app__storage_menu__tests__storage_status_local_with_saved_profile.snap
---
source: tui/src/app/storage_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Storage
  Host: build-host
  Active: Local SQLite files
  History: local
  A remote profile is saved. It is only a proposal until a migration finishes.


› 1. Test the remote connection       Checks the saved profile; changes nothing
  2. Preview migrating to PostgreSQL  Shows what would move and what blocks it
  3. Close

  enter select · esc back
