codex-rs/tui/src/app/snapshots/codex_tui__app__storage_menu__tests__storage_status_never_managed_with_profile.snap
---
source: tui/src/app/storage_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Storage
  Host: build-host
  Active: Local SQLite files
  History: local, not yet under storage management
  A remote profile is saved. It is only a proposal until a migration finishes.


› 1. Test the remote connection           Checks the saved profile; changes
                                          nothing
  2. Preview joining an existing dataset  Copies nothing; this host's own
                                          history stays untouched
  3. Preview migrating to PostgreSQL      Shows what would move and what blocks
                                          it
  4. Close

  enter select · esc back
