codex-rs/tui/src/app/snapshots/codex_tui__app__storage_menu__tests__storage_status_records_unreadable.snap
---
source: tui/src/app/storage_menu_tests.rs
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Storage
  Host: build-host
  Active: Local SQLite files
  History: unknown; the storage records are unreadable
  No remote profile is saved on this host.
    ✗ This host's storage records are unusable


› 1. Close

  enter select · esc back
